# rust-workspace-sample

./: .gitignore  Cargo.toml  README.md
rust-cli-file-uploader/: Cargo.toml
rust-cli-file-uploader/src/: main.rs
rust-file-compression/: Cargo.toml
rust-file-compression/src/: lib.rs
rust-server/: Cargo.toml
rust-server/.sqlx/: query-d169c558df910c04f98627f46d1f0ee4fbbab4c51667ccbcee9cf966ba8db9b1.json
rust-server/migrations/: 20250402171701_init.up.sql  20250402171745_init.down.sql
rust-server/src/: app.rs  main.rs
rust-server/src/database/: sqlx.rs
rust-server/src/dtos/: mod.rs
rust-server/src/handlers/: compress_file.rs  compress_file_handler.rs  mod.rs  upload_file.rs  upload_file_handler.rs
rust-server/src/helpers/: date_formater.rs  env.rs  file.rs  logger.rs  mod.rs
rust-server/src/middlewares/: auth_guard.rs  log_requests.rs  mod.rs
rust-server/src/models/: file.rs
rust-server/src/services/: compressed_file_service.rs  file_service.rs  mod.rs
