[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
flate2 = "1"

[lib]
path = "../rust-file-compression/src/lib.rs"
