[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.110"
axum = { version = "0.8.3", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
flate2 = "1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std", "chrono", "uuid" ] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"

[lib]
path = "../rust-file-compression/src/lib.rs"
